--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "spatie/eloquent-sortable": "^4.5",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
